feat: Add PDF export functionality
This commit introduces the capability to export lesson data as a PDF.
It includes:
- Installation of `jspdf` and `jspdf-autotable` dependencies.
- Updates to `index.html` to include CDN links for the new libraries.
- Addition of a new `ExportForm` component for user interaction.
- Integration of an export button into the `Header` component.
- State management for the export form's visibility and filter options.
- Basic PDF generation logic using `jspdf-autotable` to include lesson details and summary.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     "firebase/app": "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js",
     "firebase/auth": "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js",
     "firebase/firestore": "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js",
-    "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/"
+    "firebase/": "https://aistudiocdn.com/firebase@^12.5.0/",
+    "jspdf": "https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.es.min.js",
+    "jspdf-autotable": "https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.8.2/jspdf.plugin.autotable.es.min.js"
   }
 }
 </script>
